--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
   </head>
-  <body>
+  <body class="page__body">
+    <!--Шапка сайта-->
+    <header class="main-header">
+      <a class="main-header__logo-cat" href="#">
+        <img class="logo-cat" src="img/logo-mobile.svg" width="34" height="38" alt="Логотип Кот Энерджи.">
+      </a>
+      <a class="main-header__logo-cat-energy" href="#">
+        <img class="logo-cat-energy" src="img/logo-cat-energy.svg" height="18" width="101" alt="Логотип Cat Energy.">
+      </a>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS. Адаптивная вёрстка и автоматизация</a>».</p>
+      <nav class="main-header__nav main-nav">
+        <button class="main-nav__toggle" type="button">
+          <span class="visually-hidden">Открыть меню.</span>
+        </button>
+        <div class="main-nav__wrapper">
+          <ul class="main-nav__list ">
+            <li class="main-nav__item main-nav__item--active">
+              <a href="#">Главная</a>
+            </li>
+            <li class="main-nav__item">
+              <a href="#">Каталог продукции</a>
+            </li>
+            <li class="main-nav__item">
+              <a href="#">Подбор программы</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
 
   </body>
 </html>
