Добавлена шапка сайта

--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Кэт энерджи</title>
   </head>
   <body class="page__body">
-    <!--Шапка сайта-->
+    <!--Шапка-->
     <header class="main-header">
       <a class="main-header__logo-cat" href="#">
         <img class="logo-cat" src="img/logo-mobile.svg" width="34" height="38" alt="Логотип Кот Энерджи.">
@@ -24,10 +24,10 @@
               <a href="#">Главная</a>
             </li>
             <li class="main-nav__item">
-              <a href="#">Каталог продукции</a>
+              <a class="main-nav__link" href="#">Каталог продукции</a>
             </li>
             <li class="main-nav__item">
-              <a href="#">Подбор программы</a>
+              <a class="main-nav__link" href="#">Подбор программы</a>
             </li>
           </ul>
         </div>
