Разметка блока промо-сайта

--- a/source/index.html
+++ b/source/index.html
@@ -33,6 +33,22 @@
         </div>
       </nav>
     </header>
+    <!--Основной блог -->
+    <main class="main-container">
+
+      <section class="promo">
+        <div class="promo__wrapper">
+          <h1 class="promo__title">Функциональное питание для котов</h1>
+          <h2 class="promo__subtitle">Занялся собой? Займись котом!</h2>
+          <img class="promo__image" src="images/promo-cat-energy.png."
+               alt="Фотография функционального питания для кошек Cat Energy." width="280" height="270">
+          <button class="promo__button-choose-program" type="button">Подобрать программу</button>
+        </div>
+      </section>
+
+
+
+    </main>
 
   </body>
 </html>
