--- a/source/index.html
+++ b/source/index.html
@@ -40,9 +40,33 @@
         <div class="promo__wrapper">
           <h1 class="promo__title">Функциональное питание для котов</h1>
           <h2 class="promo__subtitle">Занялся собой? Займись котом!</h2>
-          <img class="promo__image" src="images/promo-cat-energy.png."
+          <img class="promo__image" src="img/promo-cat-energy.png."
                alt="Фотография функционального питания для кошек Cat Energy." width="280" height="270">
           <button class="promo__button-choose-program" type="button">Подобрать программу</button>
+        </div>
+      </section>
+
+      <section class="catalog-program">
+        <h2 class="visually-hidden">Каталог программ питания.</h2>
+        <div class="catalog-program__wrapper">
+          <ul class="catalog-program__list">
+            <li class="catalog-program__item">
+              <h2 class="catalog-program__title">Похудение</h2>
+              <p class="catalog-program__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
+                Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
+              </p>
+              <a class="catalog-program__toggle catalog-program-slim" href="#">
+                каталог slim
+              </a>
+            </li>
+            <li class="catalog-program__item">
+              <h2 class="catalog-program__title">Набор массы</h2>
+              <p class="catalog-program__text">Заработать авторитет среди дворовых котов и даже собак?
+                Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
+              </p>
+              <a class="catalog-program__toggle catalog-program-pro" href="#">каталог pro</a>
+            </li>
+          </ul>
         </div>
       </section>
 
