--- a/source/index.html
+++ b/source/index.html
@@ -1,78 +1,100 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Кэт энерджи</title>
-  </head>
-  <body class="page__body">
-    <!--Шапка-->
-    <header class="main-header">
-      <a class="main-header__logo-cat" href="#">
-        <img class="logo-cat" src="img/logo-mobile.svg" width="34" height="38" alt="Логотип Кот Энерджи.">
-      </a>
-      <a class="main-header__logo-cat-energy" href="#">
-        <img class="logo-cat-energy" src="img/logo-cat-energy.svg" height="18" width="101" alt="Логотип Cat Energy.">
-      </a>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Кэт энерджи</title>
+</head>
+<body class="page__body">
+  <!--Шапка-->
+  <header class="main-header">
+    <a class="main-header__logo-cat" href="#">
+      <img class="logo-cat" src="img/logo-mobile.svg" width="34" height="38" alt="Логотип Кот Энерджи.">
+    </a>
+    <a class="main-header__logo-cat-energy" href="#">
+      <img class="logo-cat-energy" src="img/logo-cat-energy.svg" height="18" width="101" alt="Логотип Cat Energy.">
+    </a>
 
-      <nav class="main-header__nav main-nav">
-        <button class="main-nav__toggle" type="button">
-          <span class="visually-hidden">Открыть меню.</span>
-        </button>
-        <div class="main-nav__wrapper">
-          <ul class="main-nav__list ">
-            <li class="main-nav__item main-nav__item--active">
-              <a href="#">Главная</a>
-            </li>
-            <li class="main-nav__item">
-              <a class="main-nav__link" href="#">Каталог продукции</a>
-            </li>
-            <li class="main-nav__item">
-              <a class="main-nav__link" href="#">Подбор программы</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </header>
-    <!--Основной блог -->
-    <main class="main-container">
+    <nav class="main-header__nav main-nav">
+      <button class="main-nav__toggle" type="button">
+        <span class="visually-hidden">Открыть меню.</span>
+      </button>
+      <div class="main-nav__wrapper">
+        <ul class="main-nav__list ">
+          <li class="main-nav__item main-nav__item--active">
+            <a href="#">Главная</a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="#">Каталог продукции</a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="#">Подбор программы</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <!--Основной блог -->
+  <main class="main-container">
 
-      <section class="promo">
-        <div class="promo__wrapper">
-          <h1 class="promo__title">Функциональное питание для котов</h1>
-          <h2 class="promo__subtitle">Занялся собой? Займись котом!</h2>
-          <img class="promo__image" src="img/promo-cat-energy.png."
-               alt="Фотография функционального питания для кошек Cat Energy." width="280" height="270">
-          <button class="promo__button-choose-program" type="button">Подобрать программу</button>
-        </div>
-      </section>
+    <section class="promo">
+      <div class="promo__wrapper">
+        <h1 class="promo__title">Функциональное питание для котов</h1>
+        <h2 class="promo__subtitle">Занялся собой? Займись котом!</h2>
+        <img class="promo__image" src="img/promo-cat-energy.png."
+             alt="Фотография функционального питания для кошек Cat Energy." width="280" height="270">
+        <button class="promo__button-choose-program" type="button">Подобрать программу</button>
+      </div>
+    </section>
 
-      <section class="catalog-program">
-        <h2 class="visually-hidden">Каталог программ питания.</h2>
-        <div class="catalog-program__wrapper">
-          <ul class="catalog-program__list">
-            <li class="catalog-program__item">
-              <h2 class="catalog-program__title">Похудение</h2>
-              <p class="catalog-program__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
-                Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
-              </p>
-              <a class="catalog-program__toggle catalog-program-slim" href="#">
-                каталог slim
-              </a>
-            </li>
-            <li class="catalog-program__item">
-              <h2 class="catalog-program__title">Набор массы</h2>
-              <p class="catalog-program__text">Заработать авторитет среди дворовых котов и даже собак?
-                Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
-              </p>
-              <a class="catalog-program__toggle catalog-program-pro" href="#">каталог pro</a>
-            </li>
-          </ul>
-        </div>
-      </section>
+    <section class="catalog-program">
+      <h2 class="visually-hidden">Каталог программ питания.</h2>
+      <div class="catalog-program__wrapper">
+        <ul class="catalog-program__list">
+          <li class="catalog-program__item catalog-program__item--cat-slim">
+            <h2 class="catalog-program__title">Похудение</h2>
+            <p class="catalog-program__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
+              Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
+            </p>
+            <a class="catalog-program__toggle catalog-program-slim" href="#">
+              каталог slim
+            </a>
+          </li>
+          <li class="catalog-program__item catalog-program__item--cat-pro">
+            <h2 class="catalog-program__title">Набор массы</h2>
+            <p class="catalog-program__text">Заработать авторитет среди дворовых котов и даже собак?
+              Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
+            </p>
+            <a class="catalog-program__toggle catalog-program-pro" href="#">каталог pro</a>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <!--Блог преимуществ-->
+    <section class="advantages">
+      <div class="advantages__wrapper">
+        <h2 class="advantages__title">Как это работает</h2>
+        <ul class="advantages__list ">
+          <li class="advantages__item advantages__item--leaf">
+            <p class="advantages__description">Функциональное питание содержит только полезные питательные вещества.</p>
+          <li class="advantages__item advantage-item--powder">
+            <p class="advantages__description">Выпускается в виде порошка, который нужно лишь залить кипятком и
+              готово.</p>
+          </li>
+          <li class="advantages__item advantages__item--eat">
+            <p class="advantages__description">Замените один-два приема обычной еды на наше функциональное питание.</p>
+          </li>
+          <li class="advantages__item advantages__item--time">
+            <p class="advantages__description">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+          </li>
+        </ul>
+      </div>
+    </section>
 
 
 
-    </main>
 
-  </body>
+  </main>
+
+</body>
 </html>
