--- a/source/index.html
+++ b/source/index.html
@@ -75,17 +75,17 @@
       <div class="advantages__wrapper">
         <h2 class="advantages__title">Как это работает</h2>
         <ul class="advantages__list ">
-          <li class="advantages__item advantages__item--leaf">
-            <p class="advantages__description">Функциональное питание содержит только полезные питательные вещества.</p>
-          <li class="advantages__item advantage-item--powder">
+          <li class="advantage__item advantage__item--leaf">
+            <p class="advantage__description">Функциональное питание содержит только полезные питательные вещества.</p>
+          <li class="advantage__item advantage-item--powder">
             <p class="advantages__description">Выпускается в виде порошка, который нужно лишь залить кипятком и
               готово.</p>
           </li>
           <li class="advantages__item advantages__item--eat">
-            <p class="advantages__description">Замените один-два приема обычной еды на наше функциональное питание.</p>
+            <p class="advantage__description">Замените один-два приема обычной еды на наше функциональное питание.</p>
           </li>
-          <li class="advantages__item advantages__item--time">
-            <p class="advantages__description">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+          <li class="advantage__item advantage__item--time">
+            <p class="advantage__description">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
           </li>
         </ul>
       </div>
@@ -118,7 +118,7 @@
 
         <div class="live-example__cat-comparison cat-comparison">
           <div class="cat-comparison__wrapper">
-            <div class="cat-comparison__before--active">
+            <div class="cat-comparison__before cat-comparison__before--active">
               <img class="cat-comparison__image-before" src="img/cat-fat.png" alt="Кот до приема кэт энерджи."
                    width="677" height="520">
             </div>
@@ -160,9 +160,9 @@
         </a>
       </div>
 
-      <section class="footer__social">
+      <section class="footer__social ">
         <h3 class="visually-hidden">Наши социальные сети.</h3>
-        <ul class="footer__social-list">
+        <ul class="footer__social-list footer-social">
           <li class="footer__social__item">
             <a class="footer-social__link" href="#">
               <span class="visually-hidden">Вконтакте.</span>
