Исправлена ошибка в футере

--- a/source/index.html
+++ b/source/index.html
@@ -163,7 +163,7 @@
       <section class="footer__social ">
         <h3 class="visually-hidden">Наши социальные сети.</h3>
         <ul class="footer__social-list footer-social">
-          <li class="footer__social__item">
+          <li class="footer-social__item">
             <a class="footer-social__link" href="#">
               <span class="visually-hidden">Вконтакте.</span>
               <svg class="footer-social__icon" aria-hidden="true" width="27" height="17" viewBox="0 0 27 17" fill="none"
