--- a/source/index.html
+++ b/source/index.html
@@ -150,9 +150,22 @@
       </div>
     </section>
   </main>
+  <!--Подвал-->
   <footer class="footer">
-
     <div class="footer__wrapper">
+      <!--Сотрудничество-->
+      <section class="footer__collaboration collaboration">
+        <div class="collaboration__wrapper">
+          <h2 class="collaboration__title">приглашаем<br>к сотрудничеству дилеров!</h2>
+          <p class="collaboration__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+          <div class="collaboration__map">
+            <h3 class="visually-hidden">Наше местоположение.</h3>
+            <img class="collaboration__image-map" src="img/map.jpg" alt="Карта, с отмеченной локацией." width="320"
+                 height="362">
+          </div>
+        </div>
+      </section>
+
       <div class="footer__logo footer-logo">
         <a class="footer-logo__logo-cat-energy" href="#">
           <img class="logo-cat-energy" src="img/logo-cat-energy.svg" alt="Логотип Cat Energy" width="101"
