Небольшие правки в формах- телефон и чекбокс

--- a/source/form.html
+++ b/source/form.html
@@ -63,19 +63,19 @@
               <ul class="purpose-program__list">
                 <li class="purpose-program__item">
                   <label class="purpose-program__slim">
-                    <input class="purpose-program__slim-form" type="radio" name="purpose-program" id="program-slim"
+                    <input class="purpose-program__slim-form" type="radio" name="purpose-program" value="program-slim"
                            checked>похудение
                   </label>
                 </li>
                 <li class="purpose-program__item">
                   <label class="purpose-program__pro">
-                    <input class="purpose-program__pro-form" type="radio" name="purpose-program" id="program-pro">набор
+                    <input class="purpose-program__pro-form" type="radio" name="purpose-program" value="program-pro">набор
                     массы
                   </label>
                 </li>
                 <li class="purpose-program__item">
                   <label class="purpose-program__advise">
-                    <input class="purpose-program__advise" type="radio" name="purpose-program" id="need-your-advice)">
+                    <input class="purpose-program__advise" type="radio" name="purpose-program" value="need-your-advice">
                     не знаю (нужен ваш совет)
                   </label>
                 </li>
@@ -92,7 +92,7 @@
               </li>
               <li class="contact__item">
                 <label class="contact__phone">Телефон:*
-                  <input class="contact__phone-form" type="number" value="8 (960) 900-60-90" name="phone" required>
+                  <input class="contact__phone-form" type="tel" value="8 (960) 900-60-90" name="phone" required>
                 </label>
               </li>
             </ul>
@@ -111,24 +111,24 @@
               <ul class="buy-more__list">
                 <li class="buy-more__item">
                   <label class="buy-more__fake-sugar">
-                    <input class="buy-more__fake-sugar-form" type="checkbox" name="buy-more[]" value="fake-sugar"
+                    <input class="buy-more__fake-sugar-form" type="checkbox" name="buy-more" value="fake-sugar"
                            checked>
                     Сахарозаменитель
                   </label>
                 </li>
                 <li class="buy-more__item">
                   <label class="buy-more__water">
-                    <input class="buy-more__water-form" type="checkbox" name="buy-more[]" value="water"> Питьевая вода
+                    <input class="buy-more__water-form" type="checkbox" name="buy-more" value="water"> Питьевая вода
                   </label>
                 </li>
                 <li class="buy-more__item">
                   <label class="buy-more__milk">
-                    <input class="buy-more__milk-form" type="checkbox" name="buy-more[]" value="milk"> Молоко
+                    <input class="buy-more__milk-form" type="checkbox" name="buy-more" value="milk"> Молоко
                   </label>
                 </li>
                 <li class="buy-more__item">
                   <label class="buy-more__vitamins">
-                    <input class="buy-more__vitamins-form" type="checkbox" name="buy-more[]" value="vitamins"> Витамины
+                    <input class="buy-more__vitamins-form" type="checkbox" name="buy-more" value="vitamins"> Витамины
                   </label>
                 </li>
               </ul>
