Правки после проверки

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -195,10 +195,10 @@
           </li>
         </ul>
       </div>
-      <div class="catalog-product-cards__all_catalog">
-        <h2>Показать еще 100500 товаров</h2>
-        <h3>На самом деле вкусов гораздо больше!</h3>
-        <button>показать все</button>
+      <div class="catalog-product-cards__all-catalog all-catalog">
+        <h2 class="all-catalog__title">Показать еще 100500 товаров</h2>
+        <h3 class="all-catalog__subtitle">На самом деле вкусов гораздо больше!</h3>
+        <button class="all-catalog__button">показать все</button>
       </div>
     </section>
     <!--Дополнительные товары-->
@@ -209,8 +209,10 @@
           <li class="additional-products__item">
             <h3 class="additional-products__name-card">Сахарозаменитель</h3>
             <table class="additional-products__info-card">
-              <td>1 упаковка (100 г)</td>
-              <td>200 P.</td>
+              <tr class="fake-sugar">
+                <td>1 упаковка (100 г)</td>
+                <td>200 P.</td>
+              </tr>
             </table>
             <button class="additional-products__buy-card">Заказать</button>
           </li>
@@ -218,8 +220,10 @@
           <li class="additional-products__item">
             <h3 class="additional-products__name-card">Питьевая вода</h3>
             <table class="additional-products__info-card">
-              <td>5 литров</td>
-              <td>50 P.</td>
+              <tr class="water">
+                <td>5 литров</td>
+                <td>50 P.</td>
+              </tr>
             </table>
             <button class="additional-products__buy-card">Заказать</button>
           </li>
@@ -227,8 +231,10 @@
           <li class="additional-products__item">
             <h3 class="additional-products__name-card">Молоко</h3>
             <table class="additional-products__info-card">
-              <td>1 литр</td>
-              <td>100 P.</td>
+              <tr class="milk">
+                <td>1 литр</td>
+                <td>100 P.</td>
+              </tr>
             </table>
             <button class="additional-products__buy-card">Заказать</button>
           </li>
@@ -236,8 +242,10 @@
           <li class="additional-products__item">
             <h3 class="additional-products__name-card">Витамины</h3>
             <table class="additional-products__info-card">
-              <td>1 упаковка (30 г)</td>
-              <td>300 P.</td>
+              <tr class="vitamins">
+                <td>1 упаковка (30 г)</td>
+                <td>300 P.</td>
+              </tr>
             </table>
             <button class="additional-products__buy-card">Заказать</button>
           </li>
