:heavy_check_mark: Сборка #4

--- a/4/form.html
+++ b/4/form.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>HTML Academy2: Кэт Энерджи. Каталог.</title>
+  <title>HTML Academy2: Кэт Энерджи. Подбор программы.</title>
   <base href="https://htmlacademy-adaptive.github.io/1975777-cat-energy-25/4/">
 </head>
 <body>
@@ -40,7 +40,7 @@
       <div class="program-selection__wrapper">
         <h2 class="program-selection__title">Подбор программы</h2>
         <h3 class="program-selection__subtitle">Заполните анкету, и мы подберем программу питания для вашего кота</h3>
-        <form class="program-selection_questionnaire questionnaire" action="https://echo.htmlacademy.ru/" method="post">
+        <form class="program-selection__questionnaire questionnaire" action="https://echo.htmlacademy.ru/" method="post">
           <ul class="questionnaire__cat-data cat-data">
             <li class="cat-data__item">
               <label class="cat-data__name">ИМЯ:*
@@ -108,28 +108,28 @@
 
           <div class="questionnaire__additionally additionally">
             <fieldset class="additionally__form">
-              <legend class="additionally__buy-more buy-more">Дополнительно</legend>
-              <ul class="buy-more__list">
-                <li class="buy-more__item">
-                  <label class="buy-more__fake-sugar">
-                    <input class="buy-more__fake-sugar-form" type="checkbox" name="buy-more" value="fake-sugar"
+              <legend class="additionally__buy-more ">Дополнительно</legend>
+              <ul class="additionally__list">
+                <li class="additionally__item">
+                  <label class="additionally__fake-sugar">
+                    <input class="additionally__fake-sugar-form" type="checkbox" name="additionally" value="fake-sugar"
                            checked>
                     Сахарозаменитель
                   </label>
                 </li>
-                <li class="buy-more__item">
-                  <label class="buy-more__water">
-                    <input class="buy-more__water-form" type="checkbox" name="buy-more" value="water"> Питьевая вода
+                <li class="additionally__item">
+                  <label class="additionally__water">
+                    <input class="additionally__water-form" type="checkbox" name="additionally" value="water"> Питьевая вода
                   </label>
                 </li>
-                <li class="buy-more__item">
-                  <label class="buy-more__milk">
-                    <input class="buy-more__milk-form" type="checkbox" name="buy-more" value="milk"> Молоко
+                <li class="additionally__item">
+                  <label class="additionally__milk">
+                    <input class="additionally__milk-form" type="checkbox" name="additionally" value="milk"> Молоко
                   </label>
                 </li>
-                <li class="buy-more__item">
-                  <label class="buy-more__vitamins">
-                    <input class="buy-more__vitamins-form" type="checkbox" name="buy-more" value="vitamins"> Витамины
+                <li class="additionally__item">
+                  <label class="additionally__vitamins">
+                    <input class="additionally__vitamins-form" type="checkbox" name="additionally" value="vitamins"> Витамины
                   </label>
                 </li>
               </ul>
