--- a/source/catalog.html
+++ b/source/catalog.html
@@ -21,13 +21,13 @@
       <div class="main-nav__wrapper">
         <ul class="main-nav__list ">
           <li class="main-nav__item ">
-            <a href="#">Главная</a>
+            <a href="source/index.html">Главная</a>
           </li>
           <li class="main-nav__item main-nav__item--active">
             <a class="main-nav__link" href="#">Каталог продукции</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="#">Подбор программы</a>
+            <a class="main-nav__link" href="source/form.html">Подбор программы</a>
           </li>
         </ul>
       </div>
