--- a/source/form.html
+++ b/source/form.html
@@ -21,10 +21,10 @@
       <div class="main-nav__wrapper">
         <ul class="main-nav__list ">
           <li class="main-nav__item ">
-            <a href="#">Главная</a>
+            <a href="source/index.html">Главная</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="#">Каталог продукции</a>
+            <a class="main-nav__link" href="source/catalog.html">Каталог продукции</a>
           </li>
           <li class="main-nav__item main-nav__item--active">
             <a class="main-nav__link" href="#">Подбор программы</a>
