описание базовых стилей для блока PROMO

--- a/source/index.html
+++ b/source/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>HTML Academy: Кэт энерджи</title>
   <link rel="stylesheet" href="css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 </head>
 <body class="page__body">
   <!--Шапка-->
@@ -39,8 +40,10 @@
 
     <section class="promo">
       <div class="promo__wrapper">
-        <h1 class="promo__title">Функциональное питание для котов</h1>
-        <h2 class="promo__subtitle">Занялся собой? Займись котом!</h2>
+        <div class="promo__wrapper-background">
+          <h1 class="promo__title">Функциональное питание для котов</h1>
+          <h2 class="promo__subtitle">Занялся собой? Займись котом!</h2>
+        </div>
         <img class="promo__image" src="img/promo-cat-energy.png"
           alt="Фотография функционального питания для кошек Cat Energy." width="280" height="270">
         <button class="promo__button-choose-program" type="button">Подобрать программу</button>
