описание базовых стилей для блока преимуществ

--- a/source/index.html
+++ b/source/index.html
@@ -82,7 +82,7 @@
           <li class="advantage__item advantage__item--leaf">
             <p class="advantage__description">Функциональное питание содержит только полезные питательные вещества.</p>
           <li class="advantage__item advantage-item--powder">
-            <p class="advantages__description">Выпускается в виде порошка, который нужно лишь залить кипятком и
+            <p class="advantage__description">Выпускается в виде порошка, который нужно лишь залить кипятком и
               готово.</p>
           </li>
           <li class="advantages__item advantages__item--eat">
