описание базовых стилей для блока live-example

--- a/source/index.html
+++ b/source/index.html
@@ -132,7 +132,7 @@
             </div>
             <div class="cat-comparison__range range-bar">
               <span class="range-bar__before">Было</span>
-              <label class="visually-hidden"> Посмотреть кота до и после.
+              <label class="range-bar__label">
                 <input class="range-bar__input" type="range" min="0" max="10" step="5" value="5">
               </label>
               <span class="range-bar__after">Стало</span>
