описание базовых стилей для блока каталога с основными товарами

--- a/source/form.html
+++ b/source/form.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
 <head>
   <meta charset="UTF-8">
   <title>HTML Academy2: Кэт Энерджи. Подбор программы.</title>
+  <link rel="stylesheet" href="css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <!--Шапка-->
@@ -21,10 +23,10 @@
       <div class="main-nav__wrapper">
         <ul class="main-nav__list ">
           <li class="main-nav__item ">
-            <a href="source/index.html">Главная</a>
+            <a href="/index.html">Главная</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="source/catalog.html">Каталог продукции</a>
+            <a class="main-nav__link" href="/catalog.html">Каталог продукции</a>
           </li>
           <li class="main-nav__item main-nav__item--active">
             <a class="main-nav__link" href="#">Подбор программы</a>
