--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
 <head>
   <meta charset="UTF-8">
   <title>HTML Academy2: Кэт Энерджи. Каталог.</title>
+  <link rel="stylesheet" href="css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <!--Шапка-->
@@ -21,13 +23,13 @@
       <div class="main-nav__wrapper">
         <ul class="main-nav__list ">
           <li class="main-nav__item ">
-            <a href="source/index.html">Главная</a>
+            <a href="/index.html">Главная</a>
           </li>
           <li class="main-nav__item main-nav__item--active">
             <a class="main-nav__link" href="#">Каталог продукции</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="source/form.html">Подбор программы</a>
+            <a class="main-nav__link" href="/form.html">Подбор программы</a>
           </li>
         </ul>
       </div>
@@ -176,7 +178,7 @@
           <li class="product-card__item">
             <img class="product-card__icon" src="img/product-card-cat-energy-slim-rice-500.png"
               alt="Кэт энерджи слим 500 грамм со вкусом риса." width="72" height="84">
-            <h3 class="product-card-item-title">Cat Energy Slim 500 г</h3>
+            <h3 class="product-card__title">Cat Energy Slim 500 г</h3>
             <table class="product-card__details">
               <tr class="mass">
                 <td>Масса</td>
