--- a/source/index.html
+++ b/source/index.html
@@ -26,10 +26,10 @@
             <a href="#">Главная</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="source/catalog.html">Каталог продукции</a>
+            <a class="main-nav__link" href="/catalog.html">Каталог продукции</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="source/form.html">Подбор программы</a>
+            <a class="main-nav__link" href="/form.html">Подбор программы</a>
           </li>
         </ul>
       </div>
