--- a/source/catalog.html
+++ b/source/catalog.html
@@ -253,7 +253,7 @@
           </li>
         </ul>
         <div class="additional-products__bonus bonus-prize">
-          <h2 class="bonus-prize__title">Закажите все и получите чехол для кота в подарок!</h2>
+          <h2 class="bonus-prize__title">Закажите все<br> и получите чехол для<br> кота в подарок!</h2>
         </div>
       </div>
     </section>
@@ -262,7 +262,7 @@
   <footer class="footer">
     <div class="footer__wrapper">
       <!--Сотрудничество-->
-      <section class="footer__collaboration collaboration">
+      <section class="footer__collaboration footer__collaboration--catalog collaboration">
         <div class="collaboration__wrapper">
           <h2 class="collaboration__title">приглашаем<br>к сотрудничеству дилеров!</h2>
           <p class="collaboration__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
