--- a/source/form.html
+++ b/source/form.html
@@ -40,23 +40,26 @@
     <section class="main-container-form__program-selection program-selection">
       <div class="program-selection__wrapper">
         <h2 class="program-selection__title">Подбор программы</h2>
-        <h3 class="program-selection__subtitle">Заполните анкету, и мы подберем программу питания для вашего кота</h3>
+        <h3 class="program-selection__subtitle">Заполните анкету, и мы подберем <br> программу питания для вашего кота
+        </h3>
         <form class="program-selection__questionnaire questionnaire" action="https://echo.htmlacademy.ru/"
           method="post">
           <ul class="questionnaire__cat-data cat-data">
             <li class="cat-data__item">
-              <label class="cat-data__name">ИМЯ:*
-                <input class="cat-data__name-form" type="text" name="name-cat" value="Барсик" required>
+              <label class="cat-data__name cat-data__name--nickname">ИМЯ:*
+                <input class="cat-data__name-form cat-data__name-form--nickname" type="text" name="name-cat"
+                  value="Барсик" required>
               </label>
             </li>
             <li class="cat-data__item">
-              <label class="cat-data__wt">Вес (кг):*
-                <input class="cat-data__wt-form" type="number" name="wt-cat" value="7" required>
+              <label class="cat-data__name cat-data__name--wt">Вес (кг):*
+                <input class="cat-data__name-form cat-data__name-form--wt" type="number" name="wt-cat" value="7"
+                  required>
               </label>
             </li>
             <li class="cat-data__item">
-              <label class="cat-data__age">Возраст (лет):
-                <input class="cat-data__age-form" type="number" name="age-cat" value="7">
+              <label class="cat-data__name cat-data__name--age">Возраст (лет):
+                <input class="cat-data__name-form cat-data__name-form--age-form" type="number" name="age-cat" value="7">
               </label>
             </li>
           </ul>
@@ -89,13 +92,15 @@
             <h3 class="contact__title">Контактные данные (владельца кота)</h3>
             <ul class="contact__list">
               <li class="contact__item">
-                <label class="contact__email">E-mail:*
-                  <input class="contact__email-form" type="email" value="kuklachev@gmail.com" name="email" required>
+                <label class="contact__label contact__label--email">E-mail:*
+                  <input class="contact__input contact__input--emai" type="email" value="kuklachev@gmail.com"
+                    name="email" required>
                 </label>
               </li>
               <li class="contact__item">
-                <label class="contact__phone">Телефон:*
-                  <input class="contact__phone-form" type="tel" value="8 (960) 900-60-90" name="phone" required>
+                <label class="contact__label contact__label--phone">Телефон:*
+                  <input class="contact__input contact__input--phone" type="tel" value="8 (960) 900-60-90" name="phone"
+                    required>
                 </label>
               </li>
             </ul>
@@ -103,8 +108,8 @@
 
           <div class="questionnaire__comment comment">
             <h3 class="comment__title">Комментарий</h3>
-            <label class="comment__skill-cat" for="skills"> </label>
-            <textarea class="comment__skill-cat-form" rows="10" cols="15" id="skills">Расскажите обо всех повaдках кота
+              <label class="comment__skill-cat" for="skills"> </label>
+              <textarea class="comment__skill-cat-form" rows="10" cols="40" id="skills">Расскажите обо всех повaдках кота
             </textarea>
           </div>
 
@@ -140,7 +145,7 @@
             </fieldset>
           </div>
           <button class="questionnaire__send-form" type="submit">Отправить заявку</button>
-          <p class="questionnaire__ required-form">* — Обязательные поля</p>
+          <p class="questionnaire__required-form">* — Обязательные поля</p>
         </form>
       </div>
     </section>
@@ -149,7 +154,7 @@
   <footer class="footer">
     <div class="footer__wrapper">
       <!--Сотрудничество-->
-      <section class="footer__collaboration collaboration">
+      <section class="footer__collaboration footer__collaboration--form collaboration">
         <div class="collaboration__wrapper">
           <h2 class="collaboration__title">приглашаем<br>к сотрудничеству дилеров!</h2>
           <p class="collaboration__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
