--- a/source/index.html
+++ b/source/index.html
@@ -79,17 +79,17 @@
       <div class="advantages__wrapper">
         <h2 class="advantages__title">Как это работает</h2>
         <ul class="advantages__list ">
-          <li class="advantage__item advantage__item--leaf">
-            <p class="advantage__description">Функциональное питание содержит только полезные питательные вещества.</p>
-          <li class="advantage__item advantage-item--powder">
-            <p class="advantage__description">Выпускается в виде порошка, который нужно лишь залить кипятком и
+          <li class="advantages__item advantages__item--leaf">
+            <p class="advantages__description">Функциональное питание<br> содержит только полезные<br> питательные вещества.</p>
+          <li class="advantages__item advantages-item--powder">
+            <p class="advantages__description">Выпускается в виде порошка,<br> который нужно лишь залить<br> кипятком и
               готово.</p>
           </li>
           <li class="advantages__item advantages__item--eat">
-            <p class="advantage__description">Замените один-два приема обычной еды на наше функциональное питание.</p>
+            <p class="advantages__description">Замените один-два приема<br> обычной еды на наше<br> функциональное питание.</p>
           </li>
-          <li class="advantage__item advantage__item--time">
-            <p class="advantage__description">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+          <li class="advantages__item advantage__item--time">
+            <p class="advantages__description">Уже через месяц<br> наслаждайтесь изменениями<br> к лучшему вашего питомца!</p>
           </li>
         </ul>
       </div>
