--- a/source/index.html
+++ b/source/index.html
@@ -9,30 +9,28 @@
 <body class="page__body">
   <!--Шапка-->
   <header class="main-header">
-    <a class="main-header__logo-cat" href="#">
-      <img class="logo-cat" src="img/logo-mobile.svg" width="34" height="38" alt="Логотип Кот Энерджи.">
+    <a class="main-header__logo-cat logotype" href="#">
+      <img class="logo-cat" src="img/logo-mobile.svg" width="34" height="37" alt="Логотип Кот Энерджи.">
     </a>
-    <a class="main-header__logo-cat-energy" href="#">
-      <img class="logo-cat-energy" src="img/logo-cat-energy.svg" height="18" width="101" alt="Логотип Cat Energy.">
-    </a>
+      <img class="main-header__logo-cat-energy" src="img/logo-cat-energy.svg" height="18" width="101" alt="Логотип Cat Energy.">
 
     <nav class="main-header__nav main-nav">
       <button class="main-nav__toggle" type="button">
         <span class="visually-hidden">Открыть меню.</span>
       </button>
-      <div class="main-nav__wrapper">
-        <ul class="main-nav__list ">
-          <li class="main-nav__item main-nav__item--active">
-            <a href="#">Главная</a>
-          </li>
-          <li class="main-nav__item">
-            <a class="main-nav__link" href="/catalog.html">Каталог продукции</a>
-          </li>
-          <li class="main-nav__item">
-            <a class="main-nav__link" href="/form.html">Подбор программы</a>
-          </li>
-        </ul>
-      </div>
+      <!-- <div class="main-nav__wrapper">
+         <ul class="main-nav__list ">
+           <li class="main-nav__item main-nav__item&#45;&#45;active">
+             <a href="#">Главная</a>
+           </li>
+           <li class="main-nav__item">
+             <a class="main-nav__link" href="/catalog.html">Каталог продукции</a>
+           </li>
+           <li class="main-nav__item">
+             <a class="main-nav__link" href="/form.html">Подбор программы</a>
+           </li>
+         </ul>s
+       </div>-->
     </nav>
   </header>
   <!--Основной блог -->
@@ -80,16 +78,19 @@
         <h2 class="advantages__title">Как это работает</h2>
         <ul class="advantages__list ">
           <li class="advantages__item advantages__item--leaf">
-            <p class="advantages__description">Функциональное питание<br> содержит только полезные<br> питательные вещества.</p>
+            <p class="advantages__description">Функциональное питание<br> содержит только полезные<br> питательные
+              вещества.</p>
           <li class="advantages__item advantages-item--powder">
             <p class="advantages__description">Выпускается в виде порошка,<br> который нужно лишь залить<br> кипятком и
               готово.</p>
           </li>
           <li class="advantages__item advantages__item--eat">
-            <p class="advantages__description">Замените один-два приема<br> обычной еды на наше<br> функциональное питание.</p>
+            <p class="advantages__description">Замените один-два приема<br> обычной еды на наше<br> функциональное
+              питание.</p>
           </li>
           <li class="advantages__item advantage__item--time">
-            <p class="advantages__description">Уже через месяц<br> наслаждайтесь изменениями<br> к лучшему вашего питомца!</p>
+            <p class="advantages__description">Уже через месяц<br> наслаждайтесь изменениями<br> к лучшему вашего
+              питомца!</p>
           </li>
         </ul>
       </div>
