адаптивная сетка для блока преимуществ

--- a/source/index.html
+++ b/source/index.html
@@ -80,7 +80,7 @@
           <li class="advantages__item advantages__item--leaf">
             <p class="advantages__description">Функциональное питание<br> содержит только полезные<br> питательные
               вещества.</p>
-          <li class="advantages__item advantages-item--powder">
+          <li class="advantages__item advantages__item--powder">
             <p class="advantages__description">Выпускается в виде порошка,<br> который нужно лишь залить<br> кипятком и
               готово.</p>
           </li>
@@ -88,7 +88,7 @@
             <p class="advantages__description">Замените один-два приема<br> обычной еды на наше<br> функциональное
               питание.</p>
           </li>
-          <li class="advantages__item advantage__item--time">
+          <li class="advantages__item advantages__item--time">
             <p class="advantages__description">Уже через месяц<br> наслаждайтесь изменениями<br> к лучшему вашего
               питомца!</p>
           </li>
