доработки в промо блоке

--- a/source/index.html
+++ b/source/index.html
@@ -39,13 +39,17 @@
 
     <section class="promo">
       <div class="promo__wrapper">
+        <div class="promo__wrapper-tablet">
         <div class="promo__wrapper-background">
           <h1 class="promo__title">Функциональное питание для котов</h1>
           <h2 class="promo__subtitle">Занялся собой? Займись котом!</h2>
         </div>
+        </div>
         <img class="promo__image" src="img/promo-cat-energy.png"
           alt="Фотография функционального питания для кошек Cat Energy." width="280" height="270">
-        <button class="promo__button-choose-program" type="button">Подобрать программу</button>
+        <div class="promo__button-wrapper">
+          <button class="promo__button-choose-program" type="button">Подобрать программу</button>
+        </div>
       </div>
     </section>
 
