--- a/source/index.html
+++ b/source/index.html
@@ -9,30 +9,34 @@
 <body class="page__body">
   <!--Шапка-->
   <header class="main-header">
-    <a class="main-header__logo-cat logotype" href="#">
-      <img class="logo-cat" src="img/logo-mobile.svg" width="34" height="37" alt="Логотип Кот Энерджи.">
-    </a>
-    <img class="main-header__logo-cat-energy" src="img/logo-cat-energy.svg" height="18" width="101"
-      alt="Логотип Cat Energy.">
-
-    <nav class="main-header__nav main-nav">
+    <div class="main-header__wrapper">
+      <a class="main-header__logo-cat logotype" href="#">
+        <img class="logotype__logo-cat--mobile" src="img/logo-mobile.svg" width="34" height="37"
+          alt="Логотип Кот Энерджи.">
+        <img class="logotype__logo-cat--tablet" src="img/logo-tablet.svg" width="174" height="52"
+          alt="Логотип Кэт Энерджи.">
+      </a>
+      <img class="main-header__logo-cat-energy" src="img/logo-cat-energy.svg" height="18" width="101"
+        alt="Логотип Cat Energy.">
       <button class="main-nav__toggle" type="button">
         <span class="visually-hidden">Открыть меню.</span>
       </button>
-      <!-- <div class="main-nav__wrapper">
-         <ul class="main-nav__list ">
-           <li class="main-nav__item main-nav__item&#45;&#45;active">
-             <a href="#">Главная</a>
-           </li>
-           <li class="main-nav__item">
-             <a class="main-nav__link" href="/catalog.html">Каталог продукции</a>
-           </li>
-           <li class="main-nav__item">
-             <a class="main-nav__link" href="/form.html">Подбор программы</a>
-           </li>
-         </ul>s
-       </div>-->
-    </nav>
+      <nav class="main-header__nav main-nav">
+        <div class="main-nav__wrapper">
+          <ul class="main-nav__list ">
+            <li class="main-nav__item main-nav__item--active">
+              <a href="#">Главная</a>
+            </li>
+            <li class="main-nav__item">
+              <a class="main-nav__link" href="/catalog.html">Каталог продукции</a>
+            </li>
+            <li class="main-nav__item">
+              <a class="main-nav__link" href="/form.html">Подбор программы</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
   </header>
   <!--Основной блог -->
   <main class="main-container">
@@ -40,10 +44,10 @@
     <section class="promo">
       <div class="promo__wrapper">
         <div class="promo__wrapper-tablet">
-        <div class="promo__wrapper-background">
-          <h1 class="promo__title">Функциональное питание для котов</h1>
-          <h2 class="promo__subtitle">Занялся собой? Займись котом!</h2>
-        </div>
+          <div class="promo__wrapper-background">
+            <h1 class="promo__title">Функциональное питание для котов</h1>
+            <h2 class="promo__subtitle">Занялся собой? Займись котом!</h2>
+          </div>
         </div>
         <img class="promo__image" src="img/promo-cat-energy.png"
           alt="Фотография функционального питания для кошек Cat Energy." width="280" height="270">
