создала блог reset-list

--- a/source/index.html
+++ b/source/index.html
@@ -23,7 +23,7 @@
       </button>
       <nav class="main-header__nav main-nav">
         <div class="main-nav__wrapper">
-          <ul class="main-nav__list ">
+          <ul class="main-nav__list reset-list">
             <li class="main-nav__item main-nav__item--active">
               <a href="#">Главная</a>
             </li>
@@ -59,7 +59,7 @@
     <section class="catalog-program">
       <h2 class="visually-hidden">Каталог программ питания.</h2>
       <div class="catalog-program__wrapper">
-        <ul class="catalog-program__list">
+        <ul class="catalog-program__list reset-list">
           <li class="catalog-program__item catalog-program__item--cat-slim">
             <h2 class="catalog-program__title">Похудение</h2>
             <p class="catalog-program__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
@@ -84,7 +84,7 @@
     <section class="advantages">
       <div class="advantages__wrapper">
         <h2 class="advantages__title">Как это работает</h2>
-        <ul class="advantages__list ">
+        <ul class="advantages__list reset-list">
           <li class="advantages__item advantages__item--leaf">
             <p class="advantages__description">Функциональное питание<br> содержит только полезные<br> питательные
               вещества.</p>
@@ -188,7 +188,7 @@
 
         <section class="footer__social ">
           <h3 class="visually-hidden">Наши социальные сети.</h3>
-          <ul class="footer__social-list footer-social">
+          <ul class="footer__social-list footer-social reset-list">
             <li class="footer-social__item">
               <a class="footer-social__link" href="#">
                 <span class="visually-hidden">Вконтакте.</span>
